Added some CSS to reference/reorganized

--- a/Info.html
+++ b/Info.html
@@ -33,13 +33,13 @@
             Some of the classes I have taken or am taking include:
         </h4>
         <ul>
-            <li><ins>CS70</ins>: "whatever it is called"</li>
+            <li><ins>CS70</ins>: Discrete Mathematics and Probability Theory</li>
             <li><ins>CS61B</ins>: Data Structures and Algorithms</li>
-            <li><ins>CS61A</ins>: "whatever it is called"</li>
-            <li><ins>EECS16B</ins>: "name"</li>
-            <li><ins>EECS16A</ins>: "name"</li>
-            <li><ins>Econ 100A</ins>: "name"</li>
-            <li><ins>Econ 2</ins>: "name"</li>
+            <li><ins>CS61A</ins>: The Structure and Interpretation of Computer Programs</li>
+            <li><ins>EECS16B</ins>: Designing Information Devices and Systems II</li>
+            <li><ins>EECS16A</ins>: Designing Information Devices and Systems I</li>
+            <li><ins>Econ 100A</ins>: Economic Analysis - Micro</li>
+            <li><ins>Econ 2</ins>: Introduction to Economics</li>
         </ul>
         <p>
             Total GPA: 3.89
