Added construction bar so people no it is a W.I.P.

--- a/Info.html
+++ b/Info.html
@@ -6,6 +6,9 @@
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <!-- Remove when construction complete :)-->
+    <h3 id = "construction">Construction in progress! Formatting may be messy
+        in the short term!</h3>
     <div id = "name">
         <h1 class = "title">
             <strong>Jake Webster</strong>
