Formatting improvements and preparations for beta launch of site

--- a/info.html
+++ b/info.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <!-- Remove when construction complete :)-->
-    <h3 id = "construction">Construction in progress! Formatting may be messy
-        in the short term!</h3>
+    <h3 id = "construction">This features and aesthetics of this site are currently
+        under development. Last updated: 1/12/2021</h3>
     <div id = "menu" class = "dropdown">
         <h1 class = "title">
             <strong>Jake Webster</strong>
@@ -148,7 +148,7 @@
         <!-- <h4>Ants</h4> -->
         <div class = "ants img">
             <a href = "ants.html">
-                <p class = "imgtext"><em>Python</em> In a parody of hit mobile game <em>Plants Vs. Zombies</em>, players attempt
+                <p class = "imgtext"><em>Python</em> In a parody of <em>Plants Vs. Zombies</em>, players attempt
                     to prevent the Bees from reaching the Ant Queen with a number of tactical Ants.</p>
             </a>
         </div>
@@ -157,17 +157,27 @@
         <div class = "guitar img">
             <a href = "guitar.html">
                 <p class = "imgtext"><em>Java</em> Users can enter a sequence of characters and get a nice melody
-                    outputted using the Karplus-Strong algorithm to convert the String to "plucking".</p>
+                    outputted using the Karplus-Strong algorithm to convert it to "plucking".</p>
             </a>
         </div>
 
         <!-- <h4>Stock Predictor</h4> -->
         <div class = "stock img">
             <a href = "stock.html">
-                <p class = "imgtext"><em>Python</em> This was a group project to see whether a neural network trained on
-                    day-to-day fluctuations and financial reports could outperform the market.</p>
+                <p class = "imgtext"><em>Python</em> This was a group project to see whether a training an algorithm on
+                    short-term trends and financial reports could outperform the market.</p>
             </a>
         </div>
+    </div>
+
+    <br> <br> <br> <br> <br> <br> <br> <br>
+    <div id = "sources">
+        <h3>Image Credits: </h3>
+        <br>
+        <h3><a href = "https://commons.wikimedia.org/wiki/File:Facebookisucande.png">Facebook</a></h3>
+        <h3><a href = "https://commons.wikimedia.org/wiki/File:Gmail_2020.png">GMail</a></h3>
+        <h3><a href = "https://www.flaticon.com/authors/freepik">LinkedIn</a></h3>
+        <h3><a href = "https://www.github.com">GitHub</a></h3>
     </div>
 </body>
 </html>
