--- a/stock.html
+++ b/stock.html
@@ -6,7 +6,7 @@
     <link href="projectstyles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <a href = "info.html">
+    <a href = "index.html">
         <h3 class = "back"><- Go Back</h3>
     </a>
 
