Updated construction bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Remove when construction complete :)-->
     <h3 id = "construction">This features and aesthetics of this site are currently
-        under development. Last updated: 1/12/2021</h3>
+        under development and may not behave optimally in the short run. Last updated: 1/17/2021</h3>
     <div id = "menu" class = "dropdown">
         <h1 class = "title">
             <strong>Jake Webster</strong>
