--- a/guitar.html
+++ b/guitar.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Guitar Project</title>
+    <link rel="icon" href="images/logo_alt.png"/>
     <link href="projectstyles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+
+
     <a href = "index.html">
         <h3 class = "back"><- Go Back</h3>
     </a>
