--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jake Webster</title>
+    <link rel="icon" href="images/logo_alt.png"/>
     <link href="style.css" type="text/css" rel="stylesheet">
     <script src = "script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -10,17 +11,17 @@
 <body>
     <!-- Remove when construction complete :)-->
     <h3 id = "construction">This features and aesthetics of this site are currently
-        under development and may not behave optimally in the short run. Last updated: 1/17/2021</h3>
+        under development and may not behave optimally in the short run. Last updated: 5/18/2021</h3>
     <div id = "menu" class = "dropdown">
         <h1 class = "title">
             <strong>Jake Webster</strong>
         </h1>
         <h1 class = "blank"></h1>
-        <h1><a href = "#contact_head">Contact</a></h1>
         <h1><a href = "#about_head">About Me</a></h1>
         <h1><a href = "#school_head">Classes</a></h1>
         <h1><a href = "#skills_head">Skills</a></h1>
         <h1><a href = "#projects_head">Projects</a></h1>
+        <h1><a href = "#contact_head">Contact</a></h1>
     </div>
     <!-- Helpful code?
     <button id="btn">Save</button>
@@ -29,32 +30,6 @@
     }
     let btn = document.querySelector('#btn');
     btn.addEventListener('click',btnClicked); -->
-    <h2 id = "contact_head" onclick = "minimize('contact')">
-        <strong>Contact Me</strong>
-    </h2>
-    <div id = "contact">
-        <a href= "https://www.facebook.com/profile.php?id=100009311455177">
-            <img src = "images/facebook.png" width = 38%
-                 alt = "Source: https://commons.wikimedia.org/wiki/File:Facebookisucande.png">
-        </a>
-        <a href= "mailto: jakewebs2@gmail.com">
-            <img src = "images/gmail.png" width = 35%
-                 alt = "Source: https://commons.wikimedia.org/wiki/File:Gmail_2020.png">
-        </a>
-        <a href= "https://www.linkedin.com/in/jake-webster23/">
-            <img src = "images/linkedin.png" width = 28%
-                 alt = "Source: https://www.flaticon.com/authors/freepik">
-        </a>
-        <!--<div>Icons made by
-            <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
-            from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
-        <a href= "https://www.github.com/jakewebs">
-            <img src = "images/github.png" width = 28%
-                 alt = "Source: https://www.github.com">
-        </a>
-    </div>
-
-    <br>
 
     <h2 id = "about_head" onclick = "minimize('intro')">
         <strong>About Me</strong>
@@ -173,7 +148,34 @@
         </div>
     </div>
 
-    <br> <br> <br> <br> <br> <br> <br> <br>
+    <br><br><br><br><br>
+
+    <h2 id = "contact_head" onclick = "minimize('contact')">
+        <strong>Contact Me</strong>
+    </h2>
+    <div id = "contact">
+        <a href= "https://www.facebook.com/profile.php?id=100009311455177">
+            <img src = "images/facebook2.png" width = 18%
+                 alt = "Source: https://seeklogo.com/vector-logo/290323/facebook-icon-circle">
+        </a>
+        <a href= "mailto: jakewebs2@gmail.com">
+            <img src = "images/mail2.png" width = 21%
+                 alt = "Source: https://commons.wikimedia.org/wiki/File:Gmail_2020.png">
+        </a>
+        <a href= "https://www.linkedin.com/in/jake-webster23/">
+            <img src = "images/linkedin2.png" width = 15%
+                 alt = "Source: https://www.flaticon.com/authors/freepik">
+        </a>
+        <!--<div>Icons made by
+            <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+            from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+        <a href= "https://www.github.com/jakewebs">
+            <img src = "images/github2.png" width = 15%
+                 alt = "Source: https://www.github.com">
+        </a>
+    </div>
+
+    <br> <br> <br>
     <div id = "sources">
         <h3>Image Credits: </h3>
         <br>
