--- a/ants.html
+++ b/ants.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ants Project</title>
+    <link rel="icon" href="images/logo_alt.png"/>
     <link href="projectstyles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
