Bug fixes/Roboto Light font for body

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title>Jake Webster</title>
     <link rel="icon" href="images/logo_alt.png"/>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src = "script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <!-- Remove when construction complete :)-->
     <h3 id = "construction">This features and aesthetics of this site are currently
-        under development and may not behave optimally in the short run. Last updated: 5/22/2021</h3>
+        under development and may not behave optimally in the short run. Last updated: 6/2/2021</h3>
     <div id = "menu" class = "dropdown">
         <h1 class = "title">
             <strong>Jake Webster</strong>
@@ -65,6 +67,9 @@
         <span class="dot" onclick="showCurrent(3)"></span>
         <span class="dot" onclick="showCurrent(4)"></span>
     </div>
+
+    <br>
+    
     <div id = "intro">
         <p>
             Hi, my name is Jake Webster and I am a sophomore at the University of California, Berkeley.
@@ -95,7 +100,7 @@
             <li><ins>Econ 2</ins>: Introduction to Economics</li>
         </ul>
         <p>
-            Total GPA: 3.90
+            Total GPA: 3.89
         </p>
     </div>
 
@@ -211,7 +216,7 @@
     </div>
 
     <br> <br> <br>
-    <div id = "sources">
+    <div id = "menu" class = "dropdown">
         <h3>Image Credits: </h3>
         <br>
         <h3><a href = "https://commons.wikimedia.org/wiki/File:Facebookisucande.png">Facebook</a></h3>
