Fixed hover issue in Projects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Remove when construction complete :)-->
     <h3 id = "construction">This features and aesthetics of this site are currently
-        under development and may not behave optimally in the short run. Last updated: 6/2/2021</h3>
+        under development and may not behave optimally in the short run. Last updated: 6/14/2021</h3>
     <div id = "menu" class = "dropdown">
         <h1 class = "title">
             <strong>Jake Webster</strong>
@@ -72,11 +72,12 @@
     
     <div id = "intro">
         <p>
-            Hi, my name is Jake Webster and I am a sophomore at the University of California, Berkeley.
+            Hi, my name is Jake Webster and I am a rising junior at the University of California, Berkeley.
             I have lived in the Bay Area my entire life, and currently reside in Los Altos. I am interested
             in majoring in Computer Science along with Economics. Though my primary career focus is more
             oriented towards Software Engineering, finding something that could allow me to work with both
-            disciplines would also be very fulfilling!
+            disciplines would also be very fulfilling. In my free time, I like to bike, read nonfiction, and
+            observe the universe with my telescope!
         </p>
     </div>
 
@@ -152,35 +153,35 @@
     </h2>
     <div id = "projects">
         <!-- <h4>World Generation</h4> -->
-        <div class = "byow img" >
+        <div class = "byow img" onmouseover = "alternate('byow', 0)" onmouseout = "alternate('byow', 0)">
             <a href = "byow.html">
-                <p class = "imgtext" onmouseover = "alternate('byow', 0)">Build Your Own World</p>
+                <p class = "imgtext">Build Your Own World</p>
             </a>
         </div>
 
         <!-- <h4>Bearmaps</h4> -->
-        <div class = "map img" onmouseover = "alternate('map', 1)">
+        <div class = "map img" onmouseover = "alternate('map', 1)" onmouseout = "alternate('map', 1)">
             <a href = "map.html">
                 <p class = "imgtext">BearMaps</p>
             </a>
         </div>
 
         <!-- <h4>Ants</h4> -->
-        <div class = "ants img" onmouseover = "alternate('ants', 2)">
+        <div class = "ants img" onmouseover = "alternate('ants', 2)" onmouseout = "alternate('ants', 2)">
             <a href = "ants.html">
                 <p class = "imgtext">Ants vs. Bees</p>
             </a>
         </div>
 
         <!-- <h4>Digital Guitar</h4> -->
-        <div class = "guitar img" onmouseover = "alternate('guitar', 3)">
+        <div class = "guitar img" onmouseover = "alternate('guitar', 3)" onmouseout = "alternate('guitar', 3)">
             <a href = "guitar.html">
                 <p class = "imgtext">Digital Rockstar</p>
             </a>
         </div>
 
         <!-- <h4>Stock Predictor</h4> -->
-        <div class = "stock img" onmouseover = "alternate('stock', 4)">
+        <div class = "stock img" onmouseover = "alternate('stock', 4)" onmouseout = "alternate('stock', 4)">
             <a href = "stock.html">
                 <p class = "imgtext">Beating the Market</p>
             </a>
