--- a/byow.html
+++ b/byow.html
@@ -7,6 +7,10 @@
     <link href="projectstyles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <!-- Remove when construction complete :)-->
+    <h3 id = "construction">This features and aesthetics of this site are currently
+    under development and may not behave optimally in the short run. Last updated: 6/16/2021</h3>
+
     <a href = "index.html">
         <h3 class = "back"><- Go Back</h3>
     </a>
