Finalized byow subpage

--- a/byow.html
+++ b/byow.html
@@ -7,9 +7,6 @@
     <link href="projectstyles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <!-- Remove when construction complete :)-->
-    <h3 id = "construction">This features and aesthetics of this site are currently
-    under development and may not behave optimally in the short run. Last updated: 6/16/2021</h3>
 
     <a href = "index.html">
         <h3 class = "back"><- Go Back</h3>
@@ -17,7 +14,14 @@
 
     <h1 class = "title">World Generation Project</h1>
     <br>
-    <p class = "game"> The game will go in this box</p>
+    <!-- <iframe class = "video"
+            src= https://www.youtube.com/embed/v=cVLJHp6goig>
+    </iframe> -->
+    <iframe class = "video" width="560" height="315"
+            src="https://www.youtube.com/embed/cVLJHp6goig" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+            gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
     <br>
     <h2 class = "header">About This Project</h2>
     <div class = "text">
@@ -63,9 +67,10 @@
     <div class = "text">
         <p>
             Because this was a class project, I am not allowed to make this code publicly
-            accessible. However, I have been given permission to privately share it with interested
-            parties outside of my university, so do contact me if you are curious. (make sure
-            this is accurate)
+            accessible- part of which means I cannot upload it to the Github repo to allow
+            interactivity on this site. However, I have been given permission to privately
+            share it with interested parties outside of my university, so do contact me if
+            you are curious and would like to give it a try!
         </p>
     </div>
 </body>
